gcc/testsuite/rust/compile/issue-3922.rs
struct S(
    [u8; {
        {
            // { dg-error "mismatched types. expected .... but got ..integer.. .E0308." "" { target *-*-* } .-1 }
            struct Z;
            0
        }
        0
    }],
);

fn main() {}
